--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,6 @@
 .card-trip {
   overflow: hidden;
-  background: white;
+  background: #deb773;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
@@ -41,7 +41,7 @@
 .card-product {
   overflow: hidden;
   height: 120px;
-  background: white;
+  background: #deb773;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
@@ -54,12 +54,14 @@
 }
 
 .card-product h2 {
+  color: white;
   font-size: 10px;
   font-weight: bold;
   margin: 0;
 }
 
 .card-product p {
+  color: white;
   font-size: 8px;
   line-height: 1.4;
   opacity: .7;
